# polynomial

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  benchmark.sh  profile.sh  results.py
include/polynomial/: polynomial.cuh  polynomial.hpp
src/: main.cu  polynomial.cu
